mise place du profil Banni

--- a/templates/banni/pageBanni/pagebanni.html.twig
+++ b/templates/banni/pageBanni/pagebanni.html.twig
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include 'Users/head.html.twig' %}
+    {% include 'banni/head.html.twig' %}
 <body id="page-top">
 
 <!-- Page Wrapper -->
 <div id="wrapper">
-  {% include 'Users/Banni/sidebar.html.twig' %}
+  {% include 'banni/sidebar.html.twig' %}
       <!-- Main Content -->
     <div id="content">
-        {% include 'Users/navigation.html.twig' %}
+        {% include 'banni/navigation.html.twig' %}
         <!-- Begin Page Content -->
         <div class="container-fluid">
 
             <di class="row mt-5 d-flex flex-column align-items-center justify-content-center">
                 <di class=" col-sm-12">
-                    <p class='text-black text-center' id="paraph1"></p><br>
-                    <p class='text-black text-center' id="paraph2"></p><br>
-                    <p class='text-black text-center' id="paraph3"></p>
+                    <p class='text-black text-center w-100' id="paraph1"></p><br>
+                    <p class='text-black text-center w-100' id="paraph2"></p><br>
+                    <p class='text-black text-center w-100' id="paraph3"></p>
                 </div>
             </div>    
         </div>
@@ -28,7 +28,7 @@
 </div>
 <!-- End of Page Wrapper -->
 
-{% include 'Users/Banni/script.html.twig' %}
+{% include 'banni/pageBanni/script.html.twig' %}
 
 </body>
 
