--- a/templates/superAdmin/signalements/script.html.twig
+++ b/templates/superAdmin/signalements/script.html.twig
@@ -231,7 +231,7 @@ String.prototype.rtrim = function() {
 
                     });// fin edit
 
-                $('.fa-trash-alt').on("click", function(){
+                $('.fa-trash-alt').on("click", function(){ // TODO supprression
                     
                     let signalId = $(this).attr("id");
 
