--- a/templates/banni/head.html.twig
+++ b/templates/banni/head.html.twig
@@ -8,7 +8,7 @@
 
     <title>Webradio - Stream</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/color/500/pug.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/music.png">
     <!-- Custom fonts for this template-->
     <link href="../../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
