--- a/templates/banni/sidebar.html.twig
+++ b/templates/banni/sidebar.html.twig
@@ -2,15 +2,15 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('profile.setting.index') }}">
-        <div class="sidebar-brand-text mx-3">MikeSylv</div>
-        <i class="fas fa-fw far fa-edit"></i>
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('banni.setting') }}">
+        <div class="sidebar-brand-text mx-2" id="myname"></div>
+        <i class="fas fa-fw far fa-edit" id="edit-profil"></i>
     </a>
 
     <!--Avatar-->
     <a class="nav-link d-flex flex-column align-items-center" href="#">
         <div class="nav-item">
-            <img class="rounded-circle logo-setting" src="../../../assets/artist image.png"/>
+             <img class="rounded-circle logo-setting" id="logo-setting" src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" />
         </div>
     </a>
 
@@ -19,13 +19,13 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('profile.banni') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('banni.index') }}">
             <span>Dashboard</span>
         </a>
     </li>
     <!-- Nav Item - radios -->
     <li class="nav-item active d-flex align-items-center justify-content-center">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('profile.banni.radios') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('banni.radios') }}">
             <span>Radios</span>
         </a>
     </li>
@@ -35,12 +35,12 @@
 
         <!-- Nav Item -status -->
     <li class="nav-item active">
-        <span class="nav-link d-flex align-items-center justify-content-center" href="#">
-            Status de la chaîne : Banni 
-        </span>
+        <a class="nav-link d-flex align-items-center justify-content-center" href="#">
+            <span>Status de la chaîne : <span id='status'></span></span>
+        </a>
     </li>
     <li class="nav-item active d-flex align-items-center justify-content-center">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('profile.page') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('banni.page') }}">
             <span>Pourquoi ?</span>
         </a>
     </li>
@@ -56,6 +56,27 @@
 </ul>
 <!-- End of Sidebar -->
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script>
 
+
+    let store = true;
+    const token = localStorage.getItem("token");
+
+
+        if(token !== "") {
+        let username     =  localStorage.getItem("username");
+        let userAvatar   =  localStorage.getItem("avatar");
+        let userPassword =  localStorage.getItem("password");
+        let userId       =  localStorage.getItem("userId");
+        let channelId    =  localStorage.getItem("channelId");
+        let status       =  localStorage.getItem("status");
+        console.log(userAvatar);
+
+        $('#myname').html(username);
+        $('#logo-setting').attr('src', userAvatar);
+        $('#status').html(status);
+    }
+</script>
 <!-- Content Wrapper -->
 <div id="content-wrapper">
