--- a/templates/banni/base.html.twig
+++ b/templates/banni/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include 'banni/head.html.twig' %}
-<body id="page-top">
+<body id="page-top" class="">
 
 <!-- Page Wrapper -->
 <div id="wrapper">
