--- a/templates/banni/settings/base.html.twig
+++ b/templates/banni/settings/base.html.twig
@@ -4,7 +4,7 @@
     {% block stylesheets %}
          <link rel="stylesheet" href="{{ asset('css/darkmode/darkmode.css')}}">
     {% endblock %}
-<body id="page-top">
+<body id="page-top" class="">
 
 <!-- Page Wrapper -->
 <div id="wrapper">
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-xl-2">
                         <ul>
-                            <li>
+                            <li class="theme-switch">
                                 <input id="s1" type="checkbox" class="switch">
                                 <label for="s1" class="text-black">Dark Mode</label>
                             </li>
