--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -67,7 +67,7 @@
         </a>
 {% include 'login/modal.html.twig' %}
 {% include 'register/modal.html.twig' %}   
-{% include 'PasswordLost/modal.html.twig' %}      
+{% include 'passwordLost/modal.html.twig' %}      
 {% include 'messagePassword/notificationPassword.html.twig' %}
 {% include 'pages/script.html.twig' %}
     </body>
