--- a/templates/users/settings/script.html.twig
+++ b/templates/users/settings/script.html.twig
@@ -286,4 +286,11 @@ $(document).ready(function() {
         });// fin password
         
 });
+
+$('#s1').click(function(e){
+     let element = document.body;
+   element.classList.toggle("dark-mode");
+   console.log("ici toggle");
+})
+
 </script>
