correct sur quelques fichiers

--- a/templates/login/modal.html.twig
+++ b/templates/login/modal.html.twig
@@ -30,7 +30,7 @@
                         <div class="modal-footer">
                             <ul class="pl-0 d-flex flex-column w-100">
                                 <li class=" d-lg-inline text-gray-600 small text-center" style="display: inline-block">Pas encore inscrit ? <a class="text-pink" href="#registerModal" data-toggle="modal" data-dismiss="modal">Inscrivez-vous</a></li>
-                                <li class=" d-lg-inline text-gray-600 small text-center" style="display: inline-block">Mot de passe oublié ? <a class="text-pink" href="#passwordLostModal" data-toggle="modal" data-dismiss="modal">C’est ici</a></li>
+                                <li class=" d-lg-inline text-gray-600 small text-center" style="display: inline-block">Mot de passe oublié ? <a class="text-pink" href="#forgetPassword" data-toggle="modal" data-dismiss="modal">C’est ici</a></li>
                             </ul>
                         </div>          
                 </div>
