--- a/templates/register/modal.html.twig
+++ b/templates/register/modal.html.twig
@@ -35,10 +35,9 @@
                 <div class="pl-0 d-flex flex-column w-100">
                     <li class="text-gray-600 small text-center" style="display: inline-block">Déjà un compte ? <a class="text-pink" href="#loginModal" data-toggle="modal" data-dismiss="modal">Connectez
                     -vous</a></li>
-                    <li class="text-gray-600 small text-center" style="display: inline-block">Mot de passe oublié ? <a class="text-pink" href="#passwordLostModal" data-toggle="modal" data-dismiss="modal">C’est ici</a></li>
+                    <li class="text-gray-600 small text-center" style="display: inline-block">Mot de passe oublié ? <a class="text-pink" href="#" data-toggle="modal" data-dismiss="modal">C’est ici</a></li>
                 </div>
             </div>
         </div>
     </div>
 </div>
-{% include 'pages/script.html.twig' %}
